[metadata]
name = lakh-crore-numbers
version = 0.1.0
author = Suvash Thapaliya
author_email = suvash@gmail.com
description = A Python library for formatting numbers into the Lakh Crore (...हजार, लाख, करोड, अर्ब...) system.
long_description = file: README.md
long_description_content_type = text/markdown
license = ISC License
url = https://github.com/suvash/lakh-crore-numbers/tree/main/python
project_urls =
    Bug Tracker = https://github.com/suvash/lakh-crore-numbers/issues
classifiers =
    Topic :: Software Development :: Internationalization
    Topic :: Software Development :: Localization
    Development Status :: 1 - Planning
    License :: OSI Approved :: ISC License (ISCL)
    Programming Language :: Python :: 3.6
    Operating System :: OS Independent
    Intended Audience :: Developers
    Natural Language :: English
    Natural Language :: Nepali

[options]
packages = find:
python_requires = >=3.6